emulation: Fix mouse mode 1003 to correctly report if no button is pressed

https://bugzilla.gnome.org/show_bug.cgi?id=745074